# ping-pong-ba

./: .gitignore  README.md  _quarto.yml  custom.scss  index.qmd  pyproject.toml
_notebooks/: 0.0-process-data.ipynb
data/: pingpong-caba.csv
docs/: index.html  search.json
docs/pages/: datos.html
docs/site_libs/bootstrap/: bootstrap.min.css
pages/: datos.qmd
