[tool.poetry]
name = "ping_pong_caba"
version = "0.1.0"
description = "Mapa con ubicaciones de mesas de ping pong en lugares públicos de CABA"
authors = ["Fer Aguirre"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.0.3"
nbformat = "^5.1.3"
pandas = "^2.2.2"
nbclient = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
